# RC_Project

./: .gitignore
BNO08X/: platformio.ini
BNO08X/src/: main.cpp
MOZA_SDK/1.0.0.6/MSVC2019-64/docs/: functions_rela.html
MOZA_SDK/1.0.0.6/MSVC2019-64/example/: CMakeLists.txt  CMakeProjectMoza.cpp  CMakeProjectMoza.h  CMakeUserPresets.json  QtWidgetsApplication2.cpp  QtWidgetsApplication2.h  main.cpp  ui_widget.h
PPM/: platformio.ini
PPM/boards/: esp32s3.json
PPM/include/: Arm.h  PPM.h  Servo16.h  cmd.h  musical_buzzer.h
PPM/src/: PPM.cpp  Servo16.cpp  main.cpp  musical_buzzer_rmt.cpp
